EPMRPP-34334. Grid. Sticky header. Fix overlaps

--- a/app/src/components/main/grid/gridHeader/checkboxHeaderCell/checkboxHeaderCell.scss
+++ b/app/src/components/main/grid/gridHeader/checkboxHeaderCell/checkboxHeaderCell.scss
@@ -2,7 +2,7 @@
   display: table-cell;
   position: sticky;
   top: 0;
-  z-index: $Z_INDEX-STICKY-TOOLBAR;
+  z-index: $Z_INDEX-GRID_HEADER;
   height: 50px;
   padding-left: 10px;
   padding-right: 15px;
